refactor: TableGroupService 리팩토링
세부사항
- TableGroupDao 대신에 TableGroupRepository 도입
- service 및 controller 파라미터 domain 객체 대신에 dto 적용
- service 내 로직 domain 객체로 책임 이관